--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,3 +98,18 @@ div.container li img{
     align-items: center;
     text-align: center;
 }
+
+#pageHome h3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    color: #fff;
+    background-color: rgb(203, 200, 200);
+}
+#pageHome h3 a:hover{
+    color: #3c2b2b;
+}
