mudanças no site

--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,4 +1,4 @@
-footer{
+footer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,19 +6,19 @@ footer{
     background-color: black;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 20px;
-
 }
 
 .footer ul {
-    list-style-type: none; /* Remove os marcadores de lista */
+    list-style-type: none;
     padding: 0;
 }
 
 .footer li {
-    margin-bottom: 10px; /* Espaçamento entre os itens da lista */
+    margin-bottom: 10px;
 }
+
 .comment-form-popup {
-    display: none; /* Inicialmente, o formulário não será exibido */
+    display: none;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -27,7 +27,7 @@ footer{
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px; /* Define a largura máxima do formulário */
+    max-width: 400px;
 }
 
 .comment-form-popup h3 {
@@ -76,15 +76,66 @@ footer{
     background-color: #45a049;
 }
 
-/* Estilos para o botão de fechar */
 .close-btn {
     margin-top: 10px;
 }
+
 #comment-popup {
     cursor: pointer;
-    font-weight: bold; /* Negrito */
-    color: #333; /* Cor do texto */
-    background-color: #ffc107; /* Cor de fundo */
-    padding: 5px 10px; /* Espaçamento interno */
-    border-radius: 5px; /* Borda arredondada */
+    font-weight: bold;
+    color: #333;
+    background-color: #ffc107;
+    padding: 5px 10px;
+    border-radius: 5px;
 }
+
+@media only screen and (max-width: 768px) {
+    footer {
+        flex-direction: column; /* Alterando a direção para coluna */
+        text-align: center; /* Centralizando o conteúdo */
+        padding: 10px;
+    }
+
+    .footer ul {
+        margin-top: 10px; /* Adicionando margem ao topo */
+    }
+
+    .comment-form-popup {
+        padding: 10px;
+        max-width: 300px;
+    }
+
+    .comment-form-popup h3 {
+        font-size: 16px;
+        margin-bottom: 5px;
+    }
+
+    .comment-form-popup label {
+        margin-bottom: 3px;
+    }
+
+    .comment-form-popup input[type="text"],
+    .comment-form-popup textarea {
+        padding: 6px;
+        margin-bottom: 5px;
+    }
+
+    .comment-form-popup textarea {
+        height: 60px;
+    }
+
+    .comment-form-popup input[type="submit"],
+    .comment-form-popup .close-btn {
+        padding: 8px 12px;
+        font-size: 14px;
+    }
+
+    .close-btn {
+        margin-top: 5px;
+    }
+
+    #comment-popup {
+        padding: 3px 6px;
+    }
+}
+
