--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -22,3 +22,25 @@ a:link {
     margin: 10px;
   }
 
+  @media only screen and (max-width: 768px) {
+    * {
+        padding: 0;
+        margin: 0;
+    }
+
+    a:link,
+    a:visited {
+        color: black;
+        text-decoration: none;
+    }
+
+    a:hover {
+        color: rgb(197, 195, 195);
+        text-decoration: none;
+    }
+
+    section {
+        margin: 5px; /* Reduzindo a margem para telas pequenas */
+    }
+}
+
