--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,17 +99,167 @@ div.container li img{
     text-align: center;
 }
 
-#pageHome h3{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+section#secao-curiosidades{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   line-height: 1.5;
+   
+}
+section#secao-curiosidades h3{
+    margin: 5px;
+}
+section#secao-curiosidades p{
+    padding: 10px;
+}
+
+
+
+.popup {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.popupContent {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 70%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+#pageHome {
     text-align: center;
-    border: 1px solid black;
-    border-radius: 10px;
-    color: #fff;
-    background-color: rgb(203, 200, 200);
 }
-#pageHome h3 a:hover{
-    color: #3c2b2b;
+
+#pageHome h3 {
+    display: inline-block;
+    padding: 10px 20px;
+    border: 2px solid #000;
+    border-radius: 20px;
+    color: #000;
+    background-color: #fff;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
+
+#pageHome h3:hover {
+    background-color: #f2f2f2;
+    color: #333;
+    border-color: #333;
+}
+div.img img {
+    max-width: 100%; /* Define a largura máxima como 100% para que a imagem se ajuste ao tamanho da tela */
+    height: auto; /* Define a altura como automática para manter a proporção da imagem */
+}
+
+@media only screen and (max-width: 768px) {
+    section {
+        padding: 5%;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #sobreNos {
+        margin: 5%;
+        padding: 5%;
+    }
+
+    #itensReceitas li {
+        flex: 0 0 45%;
+        margin: 2%;
+    }
+
+    #pageHome p {
+        max-width: 90%;
+        margin: 5%;
+    }
+
+    #pageHome h2,
+    #pageHome h3,
+    #sobreNos h3 {
+        margin: 5%;
+        text-align: center;
+    }
+
+    section#secao-curiosidades {
+        text-align: justify;
+        line-height: 1.5;
+    }
+
+    section#secao-curiosidades h3 {
+        margin: 2%;
+    }
+
+    section#secao-curiosidades p {
+        padding: 5%;
+    }
+
+    .popupContent {
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 5%;
+        border: 1px solid #888;
+        width: 90%;
+    }
+
+    #pageHome h3 {
+        display: inline-block;
+        padding: 5% 10%;
+        border: 2px solid #000;
+        border-radius: 20px;
+        color: #000;
+        background-color: #fff;
+        text-align: center;
+        text-decoration: none;
+        font-size: 16px;
+        transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    }
+
+    #pageHome h3:hover {
+        background-color: #f2f2f2;
+        color: #333;
+        border-color: #333;
+    }
+    div.container li img {
+        max-width: 100%; /* Adicionando esta regra */
+        height: auto;
+        border-radius: 50%;
+    }
+    div.container li img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 50%;
+    }
+}
+
