--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -40,7 +40,7 @@ a:link {
     }
 
     section {
-        margin: 5px; /* Reduzindo a margem para telas pequenas */
+        margin: 5px;
     }
 }
 
