--- a/assets/css/receitas.css
+++ b/assets/css/receitas.css
@@ -40,12 +40,21 @@ body {
 }
 
 footer {
-    background-color: #fff;
-    color: #000000;
+    background-color: #000;
+    color: #fff;
     text-align: center;
     padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
+    font-family: Arial, sans-serif;
+}
+footer p {
+    margin: 0;
+    padding: 5px;
+}
+footer a {
+    color: #fff;
+    text-decoration: none;
+}
+footer a:hover {
+    color: #ddd;
 }
 
